--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,11 @@
-.body {
+body {
+  color: #212121;
   background-color: #e5e5e5;
 }
-.body-header {
-  background-color: #ffffff;
-}
-.main-preview {
-  background-color: #2f303a;
-}
-.main-features {
-  background-color: #e5e5e5;
-}
-.main-team {
-  background-color: #f5f4fa;
-}
-.footer {
-  background-color: #2f303a;
-}
+/* Цвет основного текста #212121; */
+/* Вторичный цвет текста #757575  */
+/* белый #FFFFFF */
+/* акцент #2196F3 */
+/* цвет текста в футоре rgba(255, 255, 255, 0.6); */
+/* цвет фона #E5E5E5 */
+/* вторычный цвет фона #2F303A */
