--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,9 @@ body {
 ul {
 	list-style: none;
 }
-
+a {
+	text-decoration: none;
+}
 /* ---------------HEDER--------------- */
 .logo-web {
 	font-family: "Raleway";
@@ -41,7 +43,8 @@ ul {
 	letter-spacing: 0.02em;
 	color: #212121;
 }
-.header-nav:hover {
+.header-nav:hover,
+.header-nav:focus {
 	color: #2196f3;
 }
 .header-contact {
@@ -53,10 +56,14 @@ ul {
 	letter-spacing: 0.02em;
 	color: #757575;
 }
-.header-contact:hover {
+.header-contact:hover,
+.header-contact:focus {
 	color: #2196f3;
 }
-/* ----------------PAGE-STUDIO--------------------- */
+/* --------------------------PAGE-STUDIO------------------------ */
+.main {
+	background: #2f303a;
+}
 .main-preview {
 	font-family: "Roboto";
 	font-style: normal;
@@ -82,6 +89,7 @@ ul {
 	background: #2196f3;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 	border-radius: 4px;
+	cursor: pointer;
 }
 .main-list {
 	font-family: "Roboto";
@@ -100,5 +108,98 @@ ul {
 	font-size: 14px;
 	line-height: 2;
 	letter-spacing: 0.03em;
+	color: #757575;
+}
+.main-product {
+	font-family: "Roboto";
+	font-style: normal;
+	font-weight: 700;
+	font-size: 36px;
+	line-height: 1.17;
+	text-align: center;
+	letter-spacing: 0.03em;
+
+	color: #212121;
+}
+.main-team {
+	background: #f5f4fa;
+}
+.main-team-title {
+	font-family: "Roboto";
+	font-style: normal;
+	font-weight: 700;
+	font-size: 36px;
+	line-height: 1.17px;
+	color: #212121;
+}
+.main-team-name {
+	font-family: "Roboto";
+	font-style: normal;
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 1.19;
+}
+.main-team-job {
+	font-family: "Roboto";
+	font-style: normal;
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 1.19;
+	color: #757575;
+}
+/* -----------------------FOOTER--------------------------- */
+.footer {
+	background: #2f303a;
+}
+.footer-adress {
+	font-family: "Roboto";
+	font-style: normal;
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 1.7;
+	color: #ffffff;
+}
+.footer-contact {
+	font-family: "Roboto";
+	font-style: normal;
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 1.17;
+	color: rgba(255, 255, 255, 0.6);
+}
+/* --------------------------PAGE-PORTFOLIO------------------------ */
+.btn {
+	font-family: "Roboto";
+	font-style: normal;
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 1.6;
+	color: #212121;
+	cursor: pointer;
+}
+.btn:hover,
+.btn:focus {
+	font-family: "Roboto";
+	font-style: normal;
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 1.6;
+	color: #ffffff;
+	background-color: #2196f3;
+}
+.progect {
+	font-family: "Roboto";
+	font-style: normal;
+	font-weight: 700;
+	font-size: 18px;
+	line-height: 2;
+	color: #212121;
+}
+.progect-desc {
+	font-family: "Roboto";
+	font-style: normal;
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 1.9;
 	color: #757575;
 }
