--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
 	--second-text-color: #757575;
 	--accent-color: #2196f3;
 	--primary-white-color: #ffffff;
+	--accent-section-color: #2f303a;
 }
 
 body {
@@ -73,7 +74,7 @@ a {
 }
 
 .main {
-	background: var(--primary-white-color);
+	background: var(--accent-section-color);
 }
 .main-preview {
 	font-weight: 900;
@@ -97,6 +98,7 @@ a {
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 	border-radius: 4px;
 	cursor: pointer;
+	font-family: inherit;
 }
 .main-list {
 	font-weight: 700;
@@ -145,7 +147,7 @@ a {
 	font-style: normal;
 }
 .footer {
-	background: #2f303a;
+	background: var(--accent-section-color);
 }
 .footer-adress {
 	font-size: 14px;
@@ -172,10 +174,10 @@ a {
 	line-height: 1.6;
 	color: var(--primary-text-color);
 	cursor: pointer;
+	font-family: inherit;
 }
 .btn:hover,
 .btn:focus {
-	font-family: inherit;
 	font-weight: 500;
 	font-size: 16px;
 	line-height: 1.6;
